--- a/static/css/calendar_setting.css
+++ b/static/css/calendar_setting.css
@@ -14,13 +14,24 @@ html, body {
 	display: none;
 	background-color: white;
 	border: 2px outset gray;
-	padding: 20px;
 	font-family: Tahoma;
 	font-size: 10pt;
 }
 
 #my_form label {
 	width: 200px;
+}
+
+#my_form .head {
+	background-color: black;
+	color:white;
+	text-align:center;
+	font-size: 12pt;
+	padding: 5px;
+}
+
+#my_form .body {
+	padding: 0px 20px 10px 20px;
 }
 
 /* background color for whole container and it's border*/
