--- a/static/partials/calendar.html
+++ b/static/partials/calendar.html
@@ -1,6 +1,3 @@
-
-
-
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
@@ -37,11 +34,14 @@
 				<div class="dhx_cal_header"></div>
 				<div class="dhx_cal_data"></div>
 				<div id="my_form">
-					<label for="tag">Tag</label><input type="text" name="tag" value="" id="tag"><br> <label for="text">Event text </label>
-					<input type="text" name="text" value="" id="text"><br> 
-					<input type="button" name="save" value="Save" id="save" style='width: 100px;' onclick="save_form()"> 
-					<input type="button" name="close" value="Close" id="close" style='width: 100px;' onclick="close_form()"> 
-					<input type="button" name="delete" value="Delete" id="delete" style='width: 100px;' onclick="delete_event()">
+					<p class="head">Insert Your Schedule</p>
+					<div class="body">
+						<label for="tag">Tag</label><input type="text" name="tag" value="" id="tag"><br /><br />
+						<label for="text">Event text </label><input type="text" name="text" value="" id="text"><br /> <br />
+						<input type="button" name="save" value="Save" id="save" style='width: 100px;' onclick="save_form()"> 
+						<input type="button" name="close" value="Close" id="close" style='width: 100px;' onclick="close_form()"> 
+						<input type="button" name="delete" value="Delete" id="delete" style='width: 100px;' onclick="delete_event()">
+					</div>
 				</div>
 			</div>
 		</div>			
