--- a/views/index.html
+++ b/views/index.html
@@ -21,13 +21,13 @@
 <script type="text/javascript" src="/static/js/app.js"></script>
 <script type="text/javascript" src="/static/js/controllers.js"></script>
 <script type="text/javascript" src="/static/js/services.js"></script>
+<script type="text/javascript" src="/static/js/directives.js"></script>
 
 </head>
 
 <body>
-	<ng-view></ng-view>
 	
-
+	<ng-view></ng-view>
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
