--- a/static/partials/directive/menu.html
+++ b/static/partials/directive/menu.html
@@ -11,9 +11,9 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#/calendar">Dashboard</a></li>
+				<li><a href="#/project">Project</a></li>
+				<li><a href="#/calendar">Calendar</a></li>
 				<li><a href="#/statistics">Statistics</a></li>
-				<li><a href="#/week">Extra</a></li>
 				<li ng-show="user.userId"><a><span ng-bind="user.userName">id</span></a></li>
 				<li ng-show="user.userId"><a href="/api/user/logout"><span>Logout</span></a></li>
 				<li ng-show="!user.userId"><a href="/">Login</a></li>
