--- a/static/partials/directive/menu.html
+++ b/static/partials/directive/menu.html
@@ -15,7 +15,7 @@
 				<li><a href="#/calendar">Calendar</a></li>
 				<li><a href="#/statistics">Statistics</a></li>
 				<li ng-show="user.userId"><a><span ng-bind="user.userName">id</span></a></li>
-				<li ng-show="user.userId"><a href="/api/user/logout"><span>Logout</span></a></li>
+				<li ng-show="user.userId"><a href="/logout"><span>Logout</span></a></li>
 				<li ng-show="!user.userId"><a href="/">Login</a></li>
 			</ul>
 		</div>
