--- a/static/partials/calendar.html
+++ b/static/partials/calendar.html
@@ -5,10 +5,12 @@
 				<div class="dhx_cal_navline">
 					<div class="dhx_cal_prev_button">&nbsp;</div>
 					<div class="dhx_cal_next_button">&nbsp;</div>
-					<div class="dhx_cal_today_button"></div>
+					<!-- div class="dhx_cal_today_button"></div -->
 					<div class="dhx_cal_date"></div>
-					<div class="dhx_cal_tab dhx_cal_tab_first" name="week_tab" style="right: 140px;"></div>
-					<div class="dhx_cal_tab" name="month_tab" style="right: 76px;"></div>
+					<!-- div class="dhx_cal_tab dhx_cal_tab_first" name="week_tab" style="right: 140px;"></div>
+					<div class="dhx_cal_tab" name="month_tab" style="right: 76px;"></div -->
+					<div class="dhx_cal_tab dhx_cal_tab_first" name="week_tab"></div>
+					<div class="dhx_cal_tab" name="month_tab"></div>
 				</div>
 				<div class="dhx_cal_header"></div>
 				<div class="dhx_cal_data"></div>
