--- a/static/partials/project.html
+++ b/static/partials/project.html
@@ -1,8 +1,46 @@
-<div class="container-fluid statistics">
+<style type="text/css">
+.black-overlay{
+	display: none;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	z-index:1001;
+	-moz-opacity: 0.8;
+	opacity:.80;
+	filter: alpha(opacity=80);
+}
+.white-content {
+	display: none;
+	position: absolute;
+	top: 25%;
+	left: 25%;
+	width: 50%;
+	height: 50%;
+	padding: 16px;
+	border: 3px solid gray;
+	background-color: white;
+	z-index:1002;
+	overflow: auto;
+}
+</style>
+<script>
+function openPopup() {
+	document.getElementById('light').style.display='block';document.getElementById('fade').style.display='block';
+}
+function closePopup() {
+	document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none';
+}
+</script>
+<div class="container-fluid statistics" ng-controller="projectCtrl">
 	<div class="panel panel-default" style="margin-top:30px">
 		<div class="panel-heading">
 			<span>프로젝트 관리</span>
-			<button class="btn btn-primary btn-xs">등록</button>
+			<button class="btn btn-primary btn-xs"
+			onclick="openPopup()"
+			>등록</button>
 		</div>
 		<div class="panel-body">
 			<ul>
@@ -13,5 +51,42 @@
 				<li>proj-5</li>
 			</ul>
 		</div>
+	</div>
+	<div id="popup">
+		<div id="light" class="white-content">
+			<p class="layerPopup">
+				<a href="javascript:void(0)" onclick="closePopup()">Close</a>
+			</p>
+			<form class="form-horizontal center-block" role="form">
+				<div class="form-group">
+					<label for="projectName" class="col-sm-2 control-label">Name</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" id="projectName" placeholder="Project Name" ng-model="project.name">
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="description" class="col-sm-2 control-label">Description</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" id="description" placeholder="Project Description" ng-model="project.description">
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="status" class="col-sm-2 control-label">Status</label>
+					<div class="col-sm-10">
+						<select class="form-control" id="status" ng-model="project.status">
+							<option value="O" ng-selected="true">Open</option>
+							<option value="E">End</option>
+							<option value="A">Abort</option>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-2 col-sm-10">
+						<button type="submit" class="btn btn-default" ng-click="saveProject()">Save</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div id="fade" class="black-overlay"></div>
 	</div>
 </div>
