--- a/static/partials/directive/menu.html
+++ b/static/partials/directive/menu.html
@@ -14,8 +14,7 @@
 				<li><a href="#/project">Project</a></li>
 				<li><a href="#/calendar">Calendar</a></li>
 				<li><a href="#/statistics">Statistics</a></li>
-				<li ng-show="user.userId"><a><span ng-bind="user.userName">id</span></a></li>
-				<li ng-show="user.userId"><a href="/logout"><span>Logout</span></a></li>
+				<li ng-show="user.userId"><a href="/logout">Logout(<span ng-bind="user.userName"></span>)</a></li>
 				<li ng-show="!user.userId"><a href="/">Login</a></li>
 			</ul>
 		</div>
