--- a/static/partials/project.html
+++ b/static/partials/project.html
@@ -34,11 +34,7 @@
 		</div>
 		<div class="panel-body">
 			<ul>
-				<li>proj-1</li>
-				<li>proj-2</li>
-				<li>proj-3</li>
-				<li>proj-4</li>
-				<li>proj-5</li>
+				<li ng-repeat="project in projectList"><span ng-bind="project.name"></span></li>
 			</ul>
 		</div>
 	</div>
