--- a/static/partials/project.html
+++ b/static/partials/project.html
@@ -69,7 +69,7 @@
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
 						<button type="submit" class="btn btn-default" ng-click="saveProject();showPopup = false">Save</button>
-						<button type="submit" class="btn btn-default" ng-click="deleteProject();showPopup = false">Delete</button>
+						<button ng-show="project.id" type="submit" class="btn btn-default" ng-click="deleteProject();showPopup = false">Delete</button>
 					</div>
 				</div>
 			</form>
