add project info calendar

--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,6 @@ function MainCtrl($scope, $rootScope) {
 	$rootScope.user.userName = '<<? .userName ?>>'
 }
 </script>
-
 </head>
 
 <body ng-controller="MainCtrl">
@@ -40,5 +39,6 @@ function MainCtrl($scope, $rootScope) {
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="/static/libs/bootstrap-css/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/static/libs/angular-ui/ui-bootstrap-tpls-0.11.0.min.js"></script>
 </body>
 </html>
