--- a/static/partials/project.html
+++ b/static/partials/project.html
@@ -24,18 +24,72 @@
 	overflow: auto;
 }
 </style>
-<div class="container-fluid statistics">
-	<div class="panel panel-default" style="margin-top:30px">
-		<div class="panel-heading">
-			<span>Project Management</span>
-			<button class="btn btn-primary btn-xs"
-			ng-click="showPopup = true"
-			>new</button>
+<div class="container-fluid row">	
+	<div class="col-sm-6">
+		<div class="panel panel-default" style="margin-top:30px">
+			<div class="panel-heading">
+				<span>Project List</span>
+				<button class="btn btn-primary btn-xs"
+				ng-click="project = {status:'O'}"
+				>new</button>
+			</div>
+			<div class="panel-body">
+				<ul class="list-group">
+					<li class="list-group-item" ng-repeat="project in projectList"><a href="javascript:void(0)" ng-click="setProject($index);"><span ng-bind="project.name"></span></a></li>
+				</ul>
+			</div>
 		</div>
-		<div class="panel-body">
-			<ul>
-				<li ng-repeat="project in projectList"><a href="javascript:void(0)" ng-click="setProject($index);"><span ng-bind="project.name"></span></a></li>
-			</ul>
+	</div>
+	<div class="col-sm-6">
+		<div class="panel panel-default" style="margin-top:30px">
+			<div class="panel-heading">
+				<span>Project Info</span>
+			</div>
+			<div class="panel-body">
+				<form class="form-horizontal center-block" role="form">
+					<div class="form-group">
+						<label for="projectName" class="col-sm-2 control-label">Name</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" id="projectName" placeholder="Project Name" ng-model="project.name">
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="description" class="col-sm-2 control-label">Description</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" id="description" placeholder="Project Description" ng-model="project.description">
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="status" class="col-sm-2 control-label">Status</label>
+						<div class="col-sm-10">
+							<select class="form-control" id="status" ng-model="project.status">
+								<option value="O" ng-selected="true">Open</option>
+								<option value="E">End</option>
+								<option value="A">Abort</option>
+							</select>
+						</div>
+					</div>
+					<div class="form-group form-inline">
+						<label for="periodStart" class="col-sm-2 control-label">Period</label>
+						<div class="col-sm-10">
+							<input name="periodStart" type="text" class="form-control" datepicker-popup="{{format}}" ng-model="project.periodStart" is-open="startOpened" datepicker-options="dateOptions"  ng-required="true" close-text="Close" />
+							<!--
+								date-disabled="disabled(date, mode)"
+								min-date="minDate" max-date="'2015-06-22'"
+							-->
+							<button type="button" class="btn btn-default" ng-click="open($event, 'S')"><i class="glyphicon glyphicon-calendar"></i></button>
+							<input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="project.periodEnd" is-open="endOpened" datepicker-options="dateOptions"  ng-required="true" close-text="Close" />
+							<button type="button" class="btn btn-default" ng-click="open($event, 'E')"><i class="glyphicon glyphicon-calendar"></i></button>
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-offset-2 col-sm-10">
+							<button type="submit" class="btn btn-default" ng-click="saveProject();showPopup = false">Save</button>
+							<button ng-show="project.id" type="submit" class="btn btn-default" ng-click="deleteProject();showPopup = false">Delete</button>
+						</div>
+					</div>
+				</form>
+			</div>
 		</div>
 	</div>
 	<div id="popup" ng-show="showPopup" ng-init="showPopup=false">
@@ -67,6 +121,12 @@
 					</div>
 				</div>
 				<div class="form-group">
+					<input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+					<span class="input-group-btn">
+						<button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+					</span>
+				</div>
+				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
 						<button type="submit" class="btn btn-default" ng-click="saveProject();showPopup = false">Save</button>
 						<button ng-show="project.id" type="submit" class="btn btn-default" ng-click="deleteProject();showPopup = false">Delete</button>
@@ -77,3 +137,4 @@
 		<div id="fade" class="black-overlay"></div>
 	</div>
 </div>
+<script type="text/javascript" src="/static/libs/angular-ui/ui-bootstrap-tpls-0.11.0.min.js"></script>
